--- a/client/src/app/sign-in/sign-in.page.html
+++ b/client/src/app/sign-in/sign-in.page.html
@@ -38,31 +38,31 @@
                 <h3 class="ion-text-center">{{'Or continue with' | translate}}</h3>
                 <ion-row>
                     <ion-col>
-                        <ion-button size="large" expand="round" fill="outline" class="btn" (click)="signInFacebook()">
+                        <ion-button size="large" expand="round" fill="outline" class="btn rem05" (click)="signInFacebook()">
                             <ion-icon [src]="logoFacebook"></ion-icon>
                             <!-- {{'Facebook' | translate}} -->
                         </ion-button>
                     </ion-col>
                     <ion-col>
-                        <ion-button size="large" expand="round" fill="outline" class="btn" (click)="signInGoogle()">
+                        <ion-button size="large" expand="round" fill="outline" class="btn rem05" (click)="signInGoogle()">
                             <ion-icon [src]="logoGoogle"></ion-icon>
                             <!-- {{'Google' | translate}} -->
                         </ion-button>
                     </ion-col>
                     <ion-col>
-                        <ion-button size="large" expand="round" fill="outline" class="btn" (click)="signInGoogle()">
+                        <ion-button size="large" expand="round" fill="outline" class="btn rem05" (click)="signInGoogle()">
                             <ion-icon [src]="logoApple"></ion-icon>
                             <!-- {{'Apple' | translate}} -->
                         </ion-button>
                     </ion-col>
                     <ion-col>
-                        <ion-button size="large" expand="round" fill="outline" class="btn" (click)="signInGoogle()">
+                        <ion-button size="large" expand="round" fill="outline" class="btn rem05" (click)="signInGoogle()">
                             <ion-icon [src]="logoGH"></ion-icon>
                             <!-- {{'Apple' | translate}} -->
                         </ion-button>
                     </ion-col>
                     <ion-col>
-                        <ion-button size="large" expand="round" fill="outline" class="btn" (click)="signInGoogle()">
+                        <ion-button size="large" expand="round" fill="outline" class="btn rem05" (click)="signInGoogle()">
                             <ion-icon [src]="logoMS"></ion-icon>
                             <!-- {{'Apple' | translate}} -->
                         </ion-button>
