--- a/client/src/app/template/template.component.html
+++ b/client/src/app/template/template.component.html
@@ -8,9 +8,9 @@
         </ion-title>
         <ion-label slot="end">
             @if (templateForm.controls.id.value) {
-                <ion-button color="dark" fill="clear" size="small" (click)="openSettings()">
-                    <ion-icon name="ellipsis-vertical"></ion-icon>
-                </ion-button>
+            <ion-button color="dark" fill="clear" size="small" (click)="openSettings()">
+                <ion-icon name="ellipsis-vertical"></ion-icon>
+            </ion-button>
             }
             <ion-button color="dark" fill="clear" size="small" (click)="ok()">
                 OK
@@ -33,6 +33,10 @@
                     @for (exercise of exercisesArray.controls; track $index; let exIndex = $index) {
                     <ion-item lines="none" [formGroupName]="exIndex" class="ion-no-border">
                         <app-exercise-form [style.width]="'100%'" [exercise]="exercise"
+                            [canMoveExerciseDown]="$index < exercisesArray.controls.length - 1"
+                            [canMoveExerciseUp]="$index > 0" 
+                            (moveExerciseDownEvent)="moveExerciseDown($index)"
+                            (moveExerciseUpEvent)="moveExerciseUp($index)"
                             (onRemoveExerciseEvent)="removeExercise( exIndex)">
                         </app-exercise-form>
                     </ion-item>
