--- a/client/src/app/workout-wizard/workout-wizard.component.scss
+++ b/client/src/app/workout-wizard/workout-wizard.component.scss
@@ -81,10 +81,17 @@
     width: 100%;
     padding: 5px;
     background: transparent;
-
+    .exercise-tab:first-child {
+        border-top-left-radius: 50px;
+        border-bottom-left-radius: 50px;
+    }
+    .exercise-tab:last-child {
+        border-top-right-radius: 50px;
+        border-bottom-right-radius: 50px;
+    }
     .exercise-tab {
         flex: 1;
-        height: 6px;
+        height: 15px;
         margin: 0 2px;
         border-radius: 2px;
         background-color: var(--ion-color-medium);
@@ -135,3 +142,4 @@ ion-footer {
         }
     }
 }
+
