--- a/client/src/app/workout-wizard/workout-wizard.component.scss
+++ b/client/src/app/workout-wizard/workout-wizard.component.scss
@@ -79,7 +79,8 @@
     display: flex;
     justify-content: space-around;
     width: 100%;
-    padding: 5px;
+    padding: 15px;
+    padding-bottom: 20px;
     background: transparent;
     .exercise-tab:first-child {
         border-top-left-radius: 50px;
