--- a/client/src/app/measurements/measurements.component.html
+++ b/client/src/app/measurements/measurements.component.html
@@ -47,7 +47,7 @@
                 }
                 <img src="assets/images/RYPEDD1.png" />
                 <ion-card-header>
-                    <ion-card-title>Ryp Edd</ion-card-title>
+                    <ion-card-title>Ed Ryp</ion-card-title>
                     <ion-card-subtitle>{{ 'AI Trainer' | translate }}</ion-card-subtitle>
                 </ion-card-header>
             </ion-card>
@@ -62,7 +62,7 @@
                 }
                 <img src="assets/images/RYPEDDA1.png" />
                 <ion-card-header>
-                    <ion-card-title>Ryp Eda</ion-card-title>
+                    <ion-card-title>Em Ryp</ion-card-title>
                     <ion-card-subtitle>{{ 'AI Trainer' | translate }}</ion-card-subtitle>
                 </ion-card-header>
             </ion-card>
