--- a/client/src/app/program/program.component.html
+++ b/client/src/app/program/program.component.html
@@ -210,7 +210,7 @@
 
                             <ion-button fill="clear" expand="block"
                                 (click)="addExerciseToDay(weekIndex, activeDayIndex)">
-                                {{ 'Add exercise' | translate }}
+                                {{ 'Add Exercise' | translate }}
                             </ion-button>
                         </div>
                     </div>
