--- a/client/src/app/workout/workout.component.html
+++ b/client/src/app/workout/workout.component.html
@@ -32,7 +32,7 @@
                     }
 
                     <ion-button fill="clear" expand="block" (click)="addExercises()">
-                        {{ 'Add exercise' | translate }}
+                        {{ 'Add Exercise' | translate }}
                     </ion-button>
                 </ion-label>
             </ion-item>
