--- a/client/src/app/template/template.component.html
+++ b/client/src/app/template/template.component.html
@@ -48,7 +48,7 @@
                     }
 
                     <ion-button fill="clear" expand="block" (click)="addExercises()">
-                        {{ 'Add exercise' | translate }}
+                        {{ 'Add Exercise' | translate }}
                     </ion-button>
                 </ion-label>
             </ion-item>
