feat AI assistant simple [ci]

--- a/client/src/app/chats/chats.page.html
+++ b/client/src/app/chats/chats.page.html
@@ -14,8 +14,9 @@
 
 <ion-content class="bg_color" fullscreen>
     <ion-list lines="none">
-        @if (aiTrainers.OFF < aiTrainer) {
-        <ion-item lines="" class="animate__animated animate__fadeInUp" (click)="aiConversation()">
+        @for(chat of conversations; track chat.id) {
+        @if (aiTrainers.OFF < aiTrainer) { <ion-item lines="" class="animate__animated animate__fadeInUp"
+            (click)="aiConversation(chat.id)">
             <div class="item-inner d-flex">
                 <div class="img_box center_img">
                     @if (aiTrainers.RYPED == aiTrainer) {
@@ -29,39 +30,40 @@
                     <h2 class="d-flex">
                         <span class="item-title"> @if (aiTrainers.RYPED == aiTrainer) { Ed Ryp } @else { Em Ryp } - {{
                             'AI Trainer' | translate }}</span>
-                        <small class="end">12.12.2027</small>
+                        <small class="end">{{ chat.lastMessageDate | dateTime }}</small>
                     </h2>
                     <h3 [class.system-message]="true">
                         @if ('system' === 'system') {
                         <ion-icon name="alert-circle"></ion-icon>
                         }
-                        {{ 'Last message here' }}
+                        {{ chat.lastMessage || '-' }}
                     </h3>
                 </div>
             </div>
-        </ion-item>
-        }
-        @for(chat of chatsList; track chat.id) {
-        <ion-item lines="none" class="animate__animated animate__fadeInUp" (click)="conversation(chat)">
-            <div class="item-inner d-flex">
-                <div class="img_box center_img">
-                    <img [src]="chat.avatar || 'assets/images/avatar.svg'" class="crop_img">
+            </ion-item>
+            }
+            @else {
+            <ion-item lines="none" class="animate__animated animate__fadeInUp" (click)="conversation(chat.id)">
+                <div class="item-inner d-flex">
+                    <div class="img_box center_img">
+                        <img [src]="chat.avatar || 'assets/images/avatar.svg'" class="crop_img">
+                    </div>
+                    <div class="text_box">
+                        <h2 class="d-flex">
+                            <span class="item-title">{{ chat.name }}</span>
+                            <small class="end">{{ chat.time }}</small>
+                        </h2>
+                        <h3 [class.system-message]="chat.messageType === 'system'">
+                            @if (chat.messageType === 'system') {
+                            <ion-icon name="alert-circle"></ion-icon>
+                            }
+                            {{ chat.lastMessage || '-'}}
+                        </h3>
+                    </div>
                 </div>
-                <div class="text_box">
-                    <h2 class="d-flex">
-                        <span class="item-title">{{ chat.name }}</span>
-                        <small class="end">{{ chat.time }}</small>
-                    </h2>
-                    <h3 [class.system-message]="chat.messageType === 'system'">
-                        @if (chat.messageType === 'system') {
-                        <ion-icon name="alert-circle"></ion-icon>
-                        }
-                        {{ chat.lastMessage || '-'}}
-                    </h3>
-                </div>
-            </div>
-        </ion-item>
-        }
+            </ion-item>
+            }
+            }
     </ion-list>
 </ion-content>
 
