--- a/client/src/app/trainer-profile/trainer-profile.page.html
+++ b/client/src/app/trainer-profile/trainer-profile.page.html
@@ -28,12 +28,12 @@
                 <h2> {{'about' | translate}}</h2>
                 @if (this.aiTrainer == aiTrainers.RYPED) {
                     <p class="animate__animated animate__fadeInUp">
-                        {{'Ryp Ed blends advanced analytics with adaptive training to optimize every rep, set, and session. Focused, efficient, and always on, engineered to elevate performance through precision and relentless support.' | translate}}
+                        {{'Ed Ryp blends advanced analytics with adaptive training to optimize every rep, set, and session. Focused, efficient, and always on, engineered to elevate performance through precision and relentless support.' | translate}}
                     </p>
                 }
                 @else {
                     <p class="animate__animated animate__fadeInUp">
-                        {{ 'Built for precision and progress, Ryp Em delivers customized training plans, realtime feedback, and data-driven motivation. Designed to guide, adapt, and push every user beyond limits with human like intuition and robotic consistency.' | translate }}
+                        {{ 'Built for precision and progress, Em Ryp delivers customized training plans, realtime feedback, and data-driven motivation. Designed to guide, adapt, and push every user beyond limits with human like intuition and robotic consistency.' | translate }}
                     </p>
                 }
             </div>
